--- a/app/src/main/res/layout/activity_reservation.xml
+++ b/app/src/main/res/layout/activity_reservation.xml
@@ -12,12 +12,6 @@
         android:textSize="15sp"
         android:gravity="center_horizontal"
         android:format="* 예약에 걸린시간 : %s"/>
-    <Button
-        android:id="@+id/btn_start"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="예약 시작"/>
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -37,7 +31,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <DatePicker
-            android:id="@+id/calendar1"
+            android:id="@+id/date_pick"
+            android:datePickerMode="spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <TimePicker
@@ -50,16 +45,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <Button
-            android:id="@+id/btn_stop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="예약 종료"/>
         <TextView
             android:id="@+id/text_result"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="15sp"/>
+            android:textSize="15sp"
+            android:text="0000년 00월 00일 00시 00분"/>
     </LinearLayout>
 
 </LinearLayout>
